--- a/templates/dashboard/dashform.html
+++ b/templates/dashboard/dashform.html
@@ -36,7 +36,7 @@
             type="image/png">
           <source srcset="/images/dashform@2x.webp 2x, /images/dashform.webp 1x" type="image/webp">
           <source srcset="/images/dashform@2x.png 2x, /images/dashform.png 1x" type="image/png">
-          <img src="/images/dashform.png" alt="" loading="lazy" class="dashform__box-image">
+          <img src="/images/dashform.png" alt="" class="dashform__box-image">
         </picture>
         <div class="dashform__box-text">
           Не хочется заполнять формы? Напишите нам — ответим в течение 15 минут.
