--- a/templates/dashboard/how.html
+++ b/templates/dashboard/how.html
@@ -16,7 +16,7 @@
           <picture>
             <source srcset="/images/how1@2x.webp 2x, /images/how1.webp 1x" type="image/webp">
             <source srcset="/images/how1@2x.png 2x, /images/how1.png 1x" type="image/png">
-            <img src="/images/how1.png" alt="" loading="lazy" class="how__item-img">
+            <img src="/images/how1.png" alt="" class="how__item-img">
           </picture>
           <div class="how__item-wrapper">
             <div class="how__item-hdr">
@@ -41,7 +41,7 @@
           <picture>
             <source srcset="/images/how2@2x.webp 2x, /images/how2.webp 1x" type="image/webp">
             <source srcset="/images/how2@2x.png 2x, /images/how2.png 1x" type="image/png">
-            <img src="/images/how2.png" alt="" loading="lazy" class="how__item-img">
+            <img src="/images/how2.png" alt="" class="how__item-img">
           </picture>
           <div class="how__item-wrapper">
             <div class="how__item-hdr">
