--- a/templates/dashboard/reviews.html
+++ b/templates/dashboard/reviews.html
@@ -126,7 +126,7 @@
           media="(max-width: 1240px)" type="image/png">
         <source srcset="/images/reviews-house@2x.webp 2x, /images/reviews-house.webp 1x" type="image/webp">
         <source srcset="/images/reviews-house@2x.png 2x, /images/reviews-house.png 1x" type="image/png">
-        <img src="/images/reviews-house.png" alt="" loading="lazy" class="reviews__invite-img">
+        <img src="/images/reviews-house.png" alt="" class="reviews__invite-img">
       </picture>
       <div class="reviews__invite-info">
         <div class="reviews__invite-title">
