--- a/templates/dashboard/comand.html
+++ b/templates/dashboard/comand.html
@@ -92,7 +92,7 @@
           type="image/png">
         <source srcset="/images/comand-house@2x.webp 2x, /images/comand-house.webp 1x" type="image/webp">
         <source srcset="/images/comand-house@2x.png 2x, /images/comand-house.png 1x" type="image/png">
-        <img src="/images/comand-house.png" alt="" loading="lazy" class="comand__invite-img">
+        <img src="/images/comand-house.png" alt="" class="comand__invite-img">
       </picture>
       <div class="comand__invite-info">
         <div class="comand__invite-title">
