--- a/templates/dashboard/works.html
+++ b/templates/dashboard/works.html
@@ -219,7 +219,7 @@
           type="image/png">
         <source srcset="/images/house@2x.webp 2x, /images/house.webp 1x" type="image/webp">
         <source srcset="/images/house@2x.png 2x, /images/house.png 1x" type="image/png">
-        <img src="/images/house.png" alt="" loading="lazy" class="works__invite-img">
+        <img src="/images/house.png" alt="" class="works__invite-img">
       </picture>
       <div class="works__invite-info">
         <div class="works__invite-title">
