--- a/templates/dashboard/first.html
+++ b/templates/dashboard/first.html
@@ -4,7 +4,7 @@
     <div class="first__wrapper">
       <div class="first__info">
         <h1 class="first__title">
-          Ремонт квартиры «под&nbsp;ключ» с&nbsp;мебелью в&nbsp;Калининграде от&nbsp;45&nbsp;дней
+          Ремонт <br class="for-mob"> квартиры «под&nbsp;ключ» с&nbsp;мебелью в&nbsp;Калининграде
         </h1>
         <div class="first__list">
           <div class="first__item">
