--- a/src/styles/chunks/dashboard/_first.scss
+++ b/src/styles/chunks/dashboard/_first.scss
@@ -48,11 +48,22 @@
     &__title {
         max-width: 520px;
         margin-bottom: 24px;
-        @include mixins.respond-max(tablet) {
-            // max-width: 235px;
-            & br {
-                display: none;
+        & .for-mob {
+            display: none;
+            @include mixins.respond-max(tablet) {
+                display: block;
             }
+        }
+
+        @include mixins.respond-max(tablet) {
+            text-shadow:
+                0 0 10px white,
+                0 0 15px white;
+
+            // max-width: 235px;
+            // & br {
+            //     display: none;
+            // }
         }
     }
 
@@ -127,16 +138,16 @@
             right: 0;
             width: 100%;
             height: 300px;
-            &::before {
-                content: '';
-                width: 100%;
-                height: 100%;
-                background: rgba(255, 255, 255, 0.5);
-                position: absolute;
-                z-index: 4;
-                display: block;
-                top: -40px;
-            }
+            // &::before {
+            //     content: '';
+            //     width: 100%;
+            //     height: 100%;
+            //     background: rgba(255, 255, 255, 0.5);
+            //     position: absolute;
+            //     z-index: 4;
+            //     display: block;
+            //     top: -40px;
+            // }
         }
 
         &-bg {
@@ -157,7 +168,7 @@
         &-three {
             position: absolute;
             border-radius: 16px;
-            box-shadow: 0px 0px 16px 0px #3838383d;
+            // box-shadow: 0px 0px 16px 0px #3838383d;
             animation: zIndexLoop 9s infinite;
             @include mixins.respond-max(tablet) {
                 border-radius: 4px;
@@ -213,15 +224,20 @@
         @keyframes zIndexLoop {
             0% {
                 z-index: 3;
+                box-shadow: 0px 0px 16px 0px #3838383d;
+                background: red;
             }
             33.33% {
                 z-index: 3;
+                box-shadow: 0px 0px 16px 0px #3838383d;
             }
             33.34% {
                 z-index: 1;
+                box-shadow: none;
             }
             100% {
                 z-index: 1;
+                box-shadow: none;
             }
         }
     }
