--- a/src/styles/chunks/dashboard/_first.scss
+++ b/src/styles/chunks/dashboard/_first.scss
@@ -152,7 +152,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
+        width: max-content;
         border-radius: 16px;
         overflow: hidden;
         transition: transform 0.8s ease-in-out;
