--- a/templates/dashboard/why.html
+++ b/templates/dashboard/why.html
@@ -11,7 +11,7 @@
             <source src="/videos/one.mp4" type="video/mp4" />
             Ваш браузер не поддерживает видео.
           </video>
-          <button type="button" class="why__blog-play">
+          <button type="button" class="why__blog-play video-play-btn" data-video-src="/videos/one.mp4">
             <svg class="icon" width="72" height="72">
               <use href="/images/sprite.svg#play" fill="currentColor"></use>
             </svg>
