--- a/src/styles/chunks/dashboard/_why.scss
+++ b/src/styles/chunks/dashboard/_why.scss
@@ -142,3 +142,53 @@
         }
     }
 }
+
+.video-modal {
+    position: fixed;
+    inset: 0;
+    z-index: 10;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    // background: rgba(0, 0, 0, 0.8);
+
+    &__content {
+        position: relative;
+        overflow: hidden;
+        width: 90vw; // Можно адаптивно
+        max-width: 360px;
+        // aspect-ratio: 9 / 16; // Например, вертикальное видео
+        border-radius: 16px;
+        border: 3px solid var(--main);
+        background: black;
+        @include mixins.respond-max(tablet) {
+            aspect-ratio: 3 /4;
+        }
+    }
+
+    &__video {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__close {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: none;
+        border: none;
+        color: white;
+        font-size: 24px;
+        cursor: pointer;
+        z-index: 12;
+        @include mixins.respond-max(tablet) {
+            top: 40px;
+            right: 10px;
+        }
+    }
+
+    &[hidden] {
+        display: none;
+    }
+}
