--- a/src/styles/chunks/dashboard/_works.scss
+++ b/src/styles/chunks/dashboard/_works.scss
@@ -46,15 +46,14 @@
         }
 
         &-video {
-            width: 100%;
-            max-width: 360px;
-            height: 466px;
-            border-radius: 16px;
-            object-fit: cover; // обрезает края, сохраняя пропорции
-            background: #000;
+            border-top-left-radius: 16px;
+            border-top-right-radius: 16px;
+            width: 360px;
+            height: 240px;
+            object-fit: cover;
             @include mixins.respond-max(tablet) {
-                max-width: 306px;
-                height: 458px;
+                width: 306px;
+                height: 240px;
             }
         }
 
@@ -71,8 +70,14 @@
         flex-shrink: 0;
         width: 360px;
         overflow: hidden;
+        &-wrap {
+            position: relative;
+        }
         @include mixins.respond-max(tablet) {
             width: 306px;
+        }
+        &-images {
+            height: 240px;
         }
         &-image {
             border-top-left-radius: 16px;
