--- a/templates/dashboard/reviews.html
+++ b/templates/dashboard/reviews.html
@@ -26,7 +26,7 @@
             <source src="/videos/one.mp4" type="video/mp4" />
             Ваш браузер не поддерживает видео.
           </video>
-          <button type="button" class="reviews__slide-play">
+          <button type="button" class="reviews__slide-play video-play-btn" data-video-src="/videos/one.mp4">
             <svg class="icon" width="72" height="72">
               <use href="/images/sprite.svg#play" fill="currentColor"></use>
             </svg>
