--- a/templates/dashboard/works.html
+++ b/templates/dashboard/works.html
@@ -21,7 +21,7 @@
   </div>
   <div class="works__slider swiper outer-swiper">
     <div class="swiper-wrapper">
-      <div class="works__slide swiper-slide">
+      <!-- <div class="works__slide swiper-slide">
         <video class="works__slide-video" muted playsinline preload="none" poster="/images/person.png">
           <source src="/videos/one.mp4" type="video/mp4" />
           Ваш браузер не поддерживает видео.
@@ -31,12 +31,22 @@
             <use href="/images/sprite.svg#play" fill="currentColor"></use>
           </svg>
         </button>
-      </div>
+      </div> -->
       <div class="works__item swiper-slide">
         <div class="works__item-images swiper inner-swiper">
           <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <img class="works__item-image" src="/images/work-slide.png">
+            <div class="swiper-slide ">
+              <div class="works__item-wrap works__slide">
+                <video class="works__slide-video" muted playsinline preload="none" poster="/images/work-slide.png">
+                  <source src="/videos/one.mp4" type="video/mp4" />
+                  Ваш браузер не поддерживает видео.
+                </video>
+                <button type="button" class="works__slide-play video-play-btn" data-video-src="/videos/one.mp4">
+                  <svg class="icon" width="72" height="72">
+                    <use href="/images/sprite.svg#play" fill="currentColor"></use>
+                  </svg>
+                </button>
+              </div>
             </div>
             <div class="swiper-slide">
               <img class="works__item-image" src="/images/work-slide.png">
