--- a/templates/dashboard/reviews.html
+++ b/templates/dashboard/reviews.html
@@ -22,7 +22,7 @@
     <div class="reviews__slider swiper">
       <div class="swiper-wrapper">
         <div class="reviews__slide swiper-slide">
-          <video class="reviews__slide-video" muted playsinline preload="none" poster="/images/person.png">
+          <video class="reviews__slide-video" playsinline preload="none" poster="/images/person.png">
             <source src="/videos/one.mp4" type="video/mp4" />
             Ваш браузер не поддерживает видео.
           </video>
