--- a/templates/dashboard/why.html
+++ b/templates/dashboard/why.html
@@ -7,7 +7,7 @@
     <div class="why__wrapper">
       <div class="why__blog">
         <div class="why__blog-wrapper">
-          <video class="why__blog-video" muted playsinline preload="none" poster="/images/person.png">
+          <video class="why__blog-video" playsinline preload="none" poster="/images/person.png">
             <source src="/videos/one.mp4" type="video/mp4" />
             Ваш браузер не поддерживает видео.
           </video>
