--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -17,3 +17,5 @@
 @use 'chunks/dashboard/faq';
 @use 'chunks/dashboard/comand';
 @use 'chunks/dashboard/contacts';
+
+@use 'chunks/detail/detail-first';
