--- a/templates/scripts.html
+++ b/templates/scripts.html
@@ -1,2 +1,6 @@
 <script src="./js/swiper.min.js"></script>
+<script src="https://api-maps.yandex.ru/2.1/?apikey=37ed3a59-9314-4329-8eb2-5a08f1fbba47&lang=ru_RU"
+  type="text/javascript"></script>
+<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@6.0/dist/fancybox/fancybox.umd.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/before-after-slider@1.0.0/dist/slider.bundle.js"></script>
 <script src="./js/main.js"></script>
